添加每周一期

--- a/site/content/potw/20180415.md
+++ b/site/content/potw/20180415.md
@@ -1,6 +1,6 @@
 +++
 
-title = "每周精选-第一期"  
+title = "每周精选-第1期"  
 weight = 1  
 draft = false
 description = "每周选出我看过最精彩的 5 篇优质技术文章"  
@@ -13,4 +13,4 @@ toc = false
 - [秒杀架构设计](https://toutiao.io/shares/1455797/url)
 - [二维码生成细节和原理](https://coolshell.cn/articles/10590.html)
 - [构建Uber端到端技术栈的十条经验](https://mp.weixin.qq.com/s?__biz=MzIwMzg1ODcwMw==&mid=2247487005&idx=1&sn=eb24f50840ebe3f3e5c67f46dcea558d)
-- [阮一峰：开源许可证基础知识扫盲](https://www.oschina.net/news/90054/opensource-license-introduction?from=20171029)
+- [开源许可证教程](http://www.ruanyifeng.com/blog/2017/10/open-source-license-tutorial.html)
