--- a/site/content/potw/20180422.md
+++ b/site/content/potw/20180422.md
@@ -10,4 +10,5 @@ toc = false
 +++
 
 - [Java并发设计模式--不可变模式（immutable）](https://juejin.im/post/5ac1cbde518825558723b6e9)
-- 
+- [系统拆分及结构演变](http://www.linkedkeeper.com/detail/blog.action?bid=1108&hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)
+- [集群资源调度系统设计架构总结](https://io-meter.com/2018/02/09/A-summary-of-designing-schedulers/?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)
