--- a/site/content/potw/20180422.md
+++ b/site/content/potw/20180422.md
@@ -9,7 +9,10 @@ toc = false
 
 +++
 
-- [Java并发设计模式--不可变模式（immutable）](https://juejin.im/post/5ac1cbde518825558723b6e9)
-- [系统拆分及结构演变](http://www.linkedkeeper.com/detail/blog.action?bid=1108&hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)
-- [集群资源调度系统设计架构总结](https://io-meter.com/2018/02/09/A-summary-of-designing-schedulers/?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)
-- [消息队列设计精要](https://tech.meituan.com/mq-design.html?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)
+### [Java并发设计模式--不可变模式（immutable）](https://juejin.im/post/5ac1cbde518825558723b6e9)
+### [系统拆分及结构演变](http://www.linkedkeeper.com/detail/blog.action?bid=1108&hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)
+### [集群资源调度系统设计架构总结](https://io-meter.com/2018/02/09/A-summary-of-designing-schedulers/?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)
+### [消息队列设计精要](https://tech.meituan.com/mq-design.html?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)
+- 阅读时间：40分钟左右
+- 理解难度：中级（对于消息队列有实际应用且对特性较为熟悉的人）
+- 阅读收获：对于消息队列有一个整体的认识并对于如何设计一个消息队列提供思路和参考
