--- a/site/content/potw/20180422.md
+++ b/site/content/potw/20180422.md
@@ -15,7 +15,11 @@ toc = false
 - 阅读收获：无
 
 ### [集群资源调度系统设计架构总结](https://io-meter.com/2018/02/09/A-summary-of-designing-schedulers/?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)
+- 阅读时间：45分钟左右
+- 理解难度：初级
+- 阅读收获：对多种调度器结构设计模型有整体的认识，能形成一个模糊由具体的图像。
+
 ### <font color=#3998e2>[消息队列设计精要](https://tech.meituan.com/mq-design.html?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)</font>
 - 阅读时间：40分钟左右
 - 理解难度：中级
-- 阅读收获：对于消息队列有一个整体的认识并对于如何设计一个消息队列提供思路和参考
+- 阅读收获：对于消息队列有一个整体的认识并对于如何设计一个消息队列提供思路和参考。
