--- a/site/content/potw/20180422.md
+++ b/site/content/potw/20180422.md
@@ -24,4 +24,7 @@ toc = false
 - 理解难度：中级
 - 阅读收获：对于消息队列有一个整体的认识并对于如何设计一个消息队列提供思路和参考。
 
-### <font color=#3998e2>[终于有人把云计算、大数据和人工智能讲明白了！](https://mp.weixin.qq.com/s/RYT-WyQ-ZNH6ugJ142BwwQ)</font>
+### <font color=#3998e2>[终于有人把云计算、大数据和人工智能讲明白了！](https://mp.weixin.qq.com/s/UOG30W15XV4f6zpdYCDlnA?scene=25#wechat_redirect)</font>
+- 阅读时间：60分钟左右
+- 理解难度：初级
+- 阅读收获：对于云计算、大数据和人工只能的概念和它们之间的关系变的清晰了。
