--- a/site/content/potw/20180422.md
+++ b/site/content/potw/20180422.md
@@ -28,3 +28,8 @@ toc = false
 - 阅读时间：60分钟左右
 - 理解难度：初级
 - 阅读收获：对于云计算、大数据和人工只能的概念和它们之间的关系变的清晰了。
+
+### <font color=#3998e2>[分布式锁看这篇就够了](http://www.54tianzhisheng.cn/2018/04/24/Distributed_lock/?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)</font>
+- 阅读时间：20分钟左右
+- 理解难度：初级
+- 阅读收获：一份可参考的分布式锁总结。
