--- a/site/content/potw/20180415.md
+++ b/site/content/potw/20180415.md
@@ -11,25 +11,20 @@ toc = false
 
 ### <font color=#3998e2>[一个简单可参考的API网关架构设计](https://mp.weixin.qq.com/s?__biz=MzIwMzg1ODcwMw==&mid=2247487606&idx=1&sn=4b8d0d1b7bfd18b52c57ab7256128244&chksm=96c9a616a1be2f000f7948209081c8ff8311d2469b2e00f148b55d6d07d0dee04b15b823034e#rd)</font>  
 - 阅读时间：25分钟左右
-- 理解难度：中级
-- 阅读收获：设计一个网关的关注点应分离
+- 导读：因该有收获吧。
 
 ### <font color=#3998e2>[秒杀架构设计](https://toutiao.io/shares/1455797/url)</font>  
 - 阅读时间：20分钟左右
-- 理解难度：初级
-- 阅读收获：对于秒杀架构应该注意要点和大体设计又一个大概的认知
+- 导读：对秒杀架构的大体设计有一个大概认知。
 
 ### <font color=#3998e2>[二维码生成细节和原理](https://coolshell.cn/articles/10590.html)</font>
 - 阅读时间：50分钟左右
-- 理解难度：中高级
-- 阅读收获：对二维码的生成细节和原理有大概的认知
+- 导读：对二维码的生成细节和原理有大概的认知。
 
 ### <font color=#3998e2>[构建Uber端到端技术栈的十条经验](https://mp.weixin.qq.com/s?__biz=MzIwMzg1ODcwMw==&mid=2247487005&idx=1&sn=eb24f50840ebe3f3e5c67f46dcea558d)</font>
 - 阅读时间：20分钟左右
-- 理解难度：初级
-- 阅读收获：系统开发过程中因将更多的小概率事件也纳入考量的范围中
+- 导读：不错的经验总结。
 
 ### <font color=#3998e2> [开源许可证教程](http://www.ruanyifeng.com/blog/2017/10/open-source-license-tutorial.html)</font>
 - 阅读时间：15分钟左右
-- 理解难度：初级
-- 阅读收获：大体了解了开源许可证的范围
+- 导读：了解下开源许可证吧。
