--- a/site/content/potw/20180506.md
+++ b/site/content/potw/20180506.md
@@ -11,10 +11,20 @@ toc = false
 
 ### <font color=#3998e2>[浅尝一致性Hash原理](http://ifeve.com/consist-hash/)</font>
 - 阅读时间：10分钟左右
-- 理解难度：初级
-- 阅读收获：无。
+- 导读：想了解分布式系统必须掌握的知识，至少要看看。
 
+### <font color=#3998e2>[高性能服务器架构思路【不仅是思路】](http://wetest.qq.com/lab/view/?hmsr=toutiao.io&id=80&utm_medium=toutiao.io&utm_source=toutiao.io)</font>
+- 阅读时间：60分钟左右
+- 导读：比较完整的总结，里面又不少实用案例。
 
+### <font color=#3998e2>[秒杀架构实践](http://ifeve.com/%E7%A7%92%E6%9D%80%E6%9E%B6%E6%9E%84%E5%AE%9E%E8%B7%B5/)</font>
+- 阅读时间：30分钟左右
+- 导读：整体思路清晰,实践贯穿全文。
 
+### <font color=#3998e2>[使用 Reactor 进行响应式编程](https://www.ibm.com/developerworks/cn/java/j-cn-with-reactor-response-encode/index.html?lnk=hmhm)</font>
+- 阅读时间：40分钟左右
+- 导读：精简版reactor库的使用，让你快速的了解并使用reactor进行响应式编程。
 
-
+### <font color=#3998e2>[一篇文章全面解析大数据批处理框架Spring Batch](http://www.infoq.com/cn/articles/analysis-of-large-data-batch-framework-spring-batch)</font>
+- 阅读时间：40分钟左右
+- 导读：一文快速对Spring Batch框架的使用有一个大概的了解。
