--- a/site/content/potw/20180422.md
+++ b/site/content/potw/20180422.md
@@ -11,25 +11,20 @@ toc = false
 
 ### <font color=#3998e2>[系统拆分及结构演变](http://www.linkedkeeper.com/detail/blog.action?bid=1108&hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)</font>
 - 阅读时间：5分钟左右
-- 理解难度：初级
-- 阅读收获：无
+- 导读:😳
 
 ### <font color=#3998e2>[集群资源调度系统设计架构总结](https://io-meter.com/2018/02/09/A-summary-of-designing-schedulers/?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)</font>
 - 阅读时间：45分钟左右
-- 理解难度：初级
-- 阅读收获：对多种调度器结构设计模型有整体的认识，能形成一个模糊由具体的图像。
+- 导读：让你对多种调度器结构设计模型有整体的认识，能形成一个模糊由具体的图像。
 
 ### <font color=#3998e2>[消息队列设计精要](https://tech.meituan.com/mq-design.html?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)</font>
 - 阅读时间：40分钟左右
-- 理解难度：中级
-- 阅读收获：对于消息队列有一个整体的认识并对于如何设计一个消息队列提供思路和参考。
+- 导读：让你对消息队列有一个整体的认识并对于如何设计一个消息队列提供思路和参考。
 
 ### <font color=#3998e2>[终于有人把云计算、大数据和人工智能讲明白了！](https://mp.weixin.qq.com/s/UOG30W15XV4f6zpdYCDlnA?scene=25#wechat_redirect)</font>
 - 阅读时间：60分钟左右
-- 理解难度：初级
-- 阅读收获：对于云计算、大数据和人工只能的概念和它们之间的关系变的清晰了。
+- 导读：概念！概念！让你不再迷茫云计算、大数据和人工智能的概念。
 
 ### <font color=#3998e2>[分布式锁看这篇就够了](http://www.54tianzhisheng.cn/2018/04/24/Distributed_lock/?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)</font>
 - 阅读时间：20分钟左右
-- 理解难度：初级
-- 阅读收获：一份可参考的分布式锁总结。
+- 导读：一份可参考的分布式锁总结。
