--- a/site/content/potw/20180429.md
+++ b/site/content/potw/20180429.md
@@ -11,26 +11,21 @@ toc = false
 
 ### <font color=#3998e2>[京东到家库存系统架构设计](http://www.linkedkeeper.com/detail/blog.action?bid=1108&hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)</font>
 - 阅读时间：20分钟左右
-- 理解难度：初级
-- 阅读收获：对于设计库存系统需要注意的事项以及可能会存在的问题有较为清晰的认识。
+- 导读：库存万变不离其宗，了解了解。
 
 ### <font color=#3998e2>[日访问量百亿级的应用如何做缓存架构设计](https://mp.weixin.qq.com/s/y06GEcrxHsRvU02myyKqFQ)</font>
 - 阅读时间：25分钟左右
-- 理解难度：初级
-- 阅读收获：增长经验。
+- 导读：增长点大项目经验吧。
 
 ### <font color=#3998e2>[快速测试 API 接口的新技能](http://blog.720ui.com/2018/restclient_use/?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)</font>
 - 阅读时间：5分钟左右
-- 理解难度：初级
-- 阅读收获：新的API接口测试姿势。
+- 导读：新的API接口测试姿势，你值得拥有。
 
 ### <font color=#3998e2>[Service Mesh服务网格新生代--Istio](https://zhuanlan.zhihu.com/p/29586032)</font>
 - 阅读时间：30分钟左右
-- 理解难度：中高级
-- 阅读收获：了解新的服务网格技术。
+- 导读：了解一下新的服务网格技术。
 
 ### <font color=#3998e2>[响应式编程与响应式系统](https://linux.cn/article-8773-1.html)</font>
 - 阅读时间：35分钟左右
-- 理解难度：中高级
-- 阅读收获：响应式相关概念。
+- 导读：是一篇让你了解响应式编程喝响应式系统的前世今生。
 
