--- a/site/content/potw/20180513.md
+++ b/site/content/potw/20180513.md
@@ -9,6 +9,9 @@ toc = false
 
 +++
 
+### <font color=#3998e2>[微服务 2.0 技术栈选型手册](https://mp.weixin.qq.com/s/OloZhn2pwfIrOQit_8jefA)</font>
+- 阅读时间：25分钟左右
+- 导读：可作为技术选型参考资料。
 
 
 
