--- a/site/content/potw/20180513.md
+++ b/site/content/potw/20180513.md
@@ -13,5 +13,15 @@ toc = false
 - 阅读时间：25分钟左右
 - 导读：可作为技术选型参考资料。
 
+### <font color=#3998e2>[闲话高并发的那些神话，看京东架构师如何把它拉下神坛](https://mp.weixin.qq.com/s/FLpdT9wZFT0sJBmNTCIObw)</font>
+- 阅读时间：15分钟左右
+- 导读：开发高并发程序应该了解性能瓶颈出现的地方。
 
+### <font color=#3998e2>[如果有人问你数据库的原理，叫他看这篇文章](http://blog.jobbole.com/100349/?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io#article-comment)</font>
+- 阅读时间：120分钟左右
+- 导读：值得细细品味和延伸思考的文章。
+
+### <font color=#3998e2>[中文房间之争-浅论到底什么是智能](https://mp.weixin.qq.com/s/RLeqxqYXY8OG9XIh9ulMeA)</font>
+- 阅读时间：15分钟左右
+- 导读：我是一只表现出智能的僵尸。
 
