--- a/site/content/potw/20180513.md
+++ b/site/content/potw/20180513.md
@@ -25,3 +25,6 @@ toc = false
 - 阅读时间：15分钟左右
 - 导读：我是一只表现出智能的僵尸。
 
+### <font color=#3998e2>[ARIES数据库恢复算法](https://blog.lotuslab.org/2017/01/02/ARIES%E6%95%B0%E6%8D%AE%E5%BA%93%E6%81%A2%E5%A4%8D%E7%AE%97%E6%B3%95.html)</font>
+- 阅读时间：15分钟左右
+- 导读：数据库恢复技术，了解一下。
