--- a/site/content/potw/20180520.md
+++ b/site/content/potw/20180520.md
@@ -20,3 +20,11 @@ toc = false
 ### <font color=#3998e2>[科普：QUIC 协议原理分析](https://cloud.tencent.com/developer/article/1017235)</font>
 - 阅读时间：40分钟左右
 - 导读：快速 UDP 互联网连接。
+
+### <font color=#3998e2>[魔鬼在细节中：Base64 你可能不知道的几个细节](https://liudanking.com/sitelog/%E9%AD%94%E9%AC%BC%E5%9C%A8%E7%BB%86%E8%8A%82%E4%B8%AD%EF%BC%9Abase64-%E4%BD%A0%E5%8F%AF%E8%83%BD%E4%B8%8D%E7%9F%A5%E9%81%93%E7%9A%84%E5%87%A0%E4%B8%AA%E7%BB%86%E8%8A%82/?hmsr=toutiao.io&utm_medium=toutiao.io&utm_source=toutiao.io)</font>
+- 阅读时间：15分钟左右
+- 导读：常使用base64进行编码，未了解细节的可以看看。
+
+### <font color=#3998e2>[理解：PaaS认证流程中的AK/SK和Token](https://bbs.huaweicloud.com/blogs/079b918999c111e7b8317ca23e93a891)</font>
+- 阅读时间：10分钟左右
+- 导读：了解一下 PaaS 认证流程中的AK/SK。
