--- a/site/content/potw/20180527.md
+++ b/site/content/potw/20180527.md
@@ -9,4 +9,8 @@ toc = false
 
 +++
 
+### <font color=#3998e2>[优雅关闭Spring Boot应用程序](http://blog.marcosbarbero.com/graceful-shutdown-spring-boot-apps/)</font>
+- 阅读时间：5分钟左右
+- 导读：特别需要注意的实用技能。
+
 
