网关增加https配置

--- a/site/content/potw/20180527.md
+++ b/site/content/potw/20180527.md
@@ -11,6 +11,10 @@ toc = false
 
 ### <font color=#3998e2>[优雅关闭Spring Boot应用程序](http://blog.marcosbarbero.com/graceful-shutdown-spring-boot-apps/)</font>
 - 阅读时间：5分钟左右
-- 导读：特别需要注意的实用技能。
+- 导读：特别需要注意的实用技能（新版的已添加优雅关闭）。
+
+### <font color=#3998e2>[如何进行系统分析与设计](https://mp.weixin.qq.com/s/JoKzg2vUe2IwX099xSFtFA)</font>
+- 阅读时间：5分钟左右
+- 导读：一份可参考的系统设计方法与思路。
 
 
