--- a/site/content/potw/20180527.md
+++ b/site/content/potw/20180527.md
@@ -17,4 +17,7 @@ toc = false
 - 阅读时间：5分钟左右
 - 导读：一份可参考的系统设计方法与思路。
 
+### <font color=#3998e2>[Top 20 动态规划算法](https://www.geeksforgeeks.org/top-20-dynamic-programming-interview-questions/)</font>
+- 阅读时间：#
+- 导读：很好的学习资料。
 
