--- a/site/content/potw/7.md
+++ b/site/content/potw/7.md
@@ -21,3 +21,7 @@ toc = false
 - 阅读时间：#
 - 导读：很好的学习资料。
 
+### <font color=#3998e2>[漫话：如何给女朋友解释什么是Linux的五种IO模型？](https://juejin.im/post/5b94e93b5188255c672e901e)</font>
+- 阅读时间：10
+- 导读：漫画的形式讲解Linux五种IO模型。
+
