--- a/site/content/potw/7.md
+++ b/site/content/potw/7.md
@@ -25,3 +25,9 @@ toc = false
 - 阅读时间：10
 - 导读：漫画的形式讲解Linux五种IO模型。
 
+### <font color=#3998e2>[我在构建大型支付系统时学到的分布式架构概念](https://blog.pragmaticengineer.com/distributed-architecture-concepts-i-have-learned-while-building-payments-systems/)</font>
+- 阅读时间：10
+- 导读：对于想要了解分布式概念有很大帮助。
+
+
+
