ADD:大数据行为偏差

--- a/site/content/potw/8.md
+++ b/site/content/potw/8.md
@@ -13,6 +13,10 @@ toc = false
 - 阅读时间：5分钟左右
 - 导读：只有理解了软件的"复杂",你才能做出有效可行的设计。
 
+### <font color=#3998e2>[大数据「偏见」会让我们变蠢吗](http://www.sohu.com/a/190559448_116235)</font>
+- 阅读时间：15分钟左右
+- 导读：事实上人的行为决策并不会受回声室效应影响,而变得越来越窄;数据加算法对人的偏见也只能是人的认知非理性在作祟.本篇文章对大数据"偏见"见解能让你有意识的认识到行为偏差,做出下意识的改变也未可知。
+
 
 
 
