--- a/site/content/blog/什么是响应式编程？.md
+++ b/site/content/blog/什么是响应式编程？.md
@@ -1,5 +1,4 @@
 
-
 +++
 read_time = 15
 date = "2018-02-05"
@@ -12,51 +11,47 @@ weight = 90
 +++
 
 阅读人群：软件工程师   
-您将收获：什么是响应式编程
+您将收获：了解什么是响应式编程。
 
-
-
-## 简介
-
-## 什么是响应式编程？
-> 响应式编程（Reactive Programming）是一种面向数据流和变化传播的编程范式。这意味着可以在编程语言中很方便地表达静态或动态的数据流，而相关的计算模型会自动将变化的值通过数据流进行传播。-摘自百度百科
+## 一、简介
+什么是响应式编程？
+> 响应式编程（Reactive Programming）是一种面向数据流和变化传播的编程范式。这意味着可以在编程语言中很方便地表达静态或动态的数据流，而相关的计算模型会自动将变化的值通过数据流进行传播。——摘自百度百科
 
 响应式编程有3个核心特点，它们分别是：**变化传递**（propagation of change）、**数据流**（data stream）和**声明式**（declarative）的编程范式。下面将着重介绍这3个核心特点。
 
-## 变化传递
+## 二、变化传递
 <font color=#f1ab03>变化传递是对一个或一组功能流程中的任意影响预期结果的变动事件化。</font>下面将通过事件图示例帮你理解。
 
-![image](http://on-img.com/chart_image/5aea6d81e4b0411f64e0bc26.png?_=1535881003785)
+![image](http://assets.processon.com/chart_image/5aea6d81e4b0411f64e0bc26.png?_=1588645247626)
 
 从上图中可以看到预期结果是总金额，而影响总金额的是商品单价和商品数量，这是功能流程中变动且影响预期结果的被抽象成一个个事件，从时间轴上看就是一个事件数据流。
 
-## 数据流
+## 三、数据流
 数据流类似于上图中的购物车🛒时间轴，通过搭桥牵线为每一个和购物车有交集的功能模块搭建沟通的桥梁，每一个参与进来的功能模块在完成了自身的工作之后都会在上面发布数据（事件）流向下游，下游的业务收到这条数据之后才会开始自己的工作。这有点类似于工厂的流水线，一个人加工一部分，下一个人加工是基于上一个人加工的结果。当然在本例中的购物车总金额计算中可以是一个加工方法递归使用，将递归展开来说也是同样的结果。
 
 下面是发放优惠券的一个数据流示例图：
 
-![image](http://on-img.com/chart_image/5b8bae17e4b06fc64ae064c6.png)
+![image](http://assets.processon.com/chart_image/5b8bae17e4b06fc64ae064c6.png?_=1588645173974)
 
 从图可以看出这是一个线性结构，数据的流转一环套一环，通过层层过滤数据来确定目标数据并发放优惠券。重要的是可重试，不管来的数据是什么，只要通过了数据流管道就是我们成功的发放优惠券给到活动用户。
 
-## 声明式编程范式
+## 四、声明式编程范式
 我们对上图中数据流示例进行解构可得到下面的数据流转图：
 
-![image](http://on-img.com/chart_image/5aeabad3e4b039625b008599.png)
+![image](http://assets.processon.com/chart_image/5aeabad3e4b039625b008599.png?_=1588645443333)
 
 可以看出数据从原始的杂乱到寻得最终目标数据的过程中经历过预先设计好的过滤逻辑，从而得到最终的结果的过程是比较优美的。这种将数据绑定计算逻辑正是声明式编程范式的一大特点。
 
 
-## 总结
+## 五、总结
 一个生活示例解释响应式编程，示例如下：
 
-
 ```
-你想做一杯青瓜苹果汁，首先你需要（声明）一个榨汁机，然后将青瓜和苹果依次（时间顺序）放入机具（管道）内并启动开关（执行预定义逻辑，也就是榨汁机有的功能）。
+你想做一杯青瓜苹果汁，首先你需要（声明）一个榨汁机，然后将青瓜和苹果依次（时间顺序）放入容器（管道）内并启动开关（执行预定义逻辑，也就是榨汁机有的功能）。
 ```
 
 
-## 参考资料
+## 六、参考资料
 
-[什么是响应式编程——响应式Spring的道法术器](https://blog.csdn.net/get_set/article/details/79455258)  
-[RP入门](https://github.com/benjycui/introrx-chinese-edition)
+- [什么是响应式编程](https://blog.csdn.net/get_set/article/details/79455258)  
+- [RP入门](https://github.com/benjycui/introrx-chinese-edition)
