--- a/site/content/blog/软件开发生命周期常用到的图.md
+++ b/site/content/blog/软件开发生命周期常用到的图.md
@@ -13,6 +13,7 @@ weight = 87
 阅读人群：软件工程师   
 您将收获：了解软件开发生命周期常用到的图。
 
+
 ## 一、 概述
 本文是对软件开发过程中产生的图进行归纳总结，以便在需要时能够翻看查阅使用和参考。
 
@@ -78,7 +79,7 @@ weight = 87
 
 **文档中的位置**：概要设计阶段
 
-![数据字典图](80D094501B344145A9CB04B9F474143E)
+![数据字典图](https://os-qingdao.oss-cn-qingdao.aliyuncs.com/note/image/%E6%95%B0%E6%8D%AE%E5%AD%97%E5%85%B8%E5%9B%BE.png)
 
 [数据字典](https://baike.baidu.com/item/%E6%95%B0%E6%8D%AE%E5%AD%97%E5%85%B8)
 
@@ -173,3 +174,4 @@ weight = 87
 
 ## 四、 参考资料
 - [软件工程各种图](https://blog.csdn.net/wyj19950908/article/details/53024670)
+
