--- a/site/content/blog/如何设计一个高性能可扩展的抽奖系统.md
+++ b/site/content/blog/如何设计一个高性能可扩展的抽奖系统.md
@@ -3,7 +3,7 @@
 read_time = 20
 date = "2018-09-11"
 title = "如何设计一个高性能可扩展的抽奖系统"
-tags = ["Reactive Programming"]
+tags = ["系统设计","架构设计","软件设计"]
 categories = ["general"]
 draft = false
 description = "本文从软件开发过程的不同阶段详解如何设计一个高性能可扩展的抽奖系统。"
