--- a/site/content/blog/微服务架构技术栈选型.md
+++ b/site/content/blog/微服务架构技术栈选型.md
@@ -2,11 +2,11 @@
 +++
 read_time = 15
 date = "2020-05-01"
-title = "过度拟合"
-tags = ["Reactive Programming"]
+title = "微服务架构技术栈选型（持续更新）"
+tags = ["微服务","Java"]
 categories = ["general"]
 draft = false
-description = "Java 系微服务技术选型参考手册（持续更新）。"
+description = "Java 系微服务技术选型参考手册。"
 weight = 84
 +++
 
