--- a/site/content/blog/软件开发生命周期常用到的图.md
+++ b/site/content/blog/软件开发生命周期常用到的图.md
@@ -3,7 +3,7 @@
 read_time = 10
 date = "2018-09-02"
 title = "软件开发生命周期常用到的图（持续更新）"
-tags = ["Reactive Programming"]
+tags = ["软件设计"]
 categories = ["general"]
 draft = false
 description = "本文是对软件开发过程中产生的图进行归纳总结，以便在需要时能够翻看查阅使用和参考。"
