--- a/site/content/blog/什么是响应式编程？.md
+++ b/site/content/blog/什么是响应式编程？.md
@@ -3,7 +3,7 @@
 read_time = 15
 date = "2018-02-05"
 title = "响应式编程介绍"
-tags = ["响应式编程",“编程范式”]
+tags = ["响应式编程","编程范式"]
 categories = ["general"]
 draft = false
 description = "响应式编程（Reactive Programming）是一种面向数据流和变化传播的编程范式。这意味着可以在编程语言中很方便地表达静态或动态的数据流，而相关的计算模型会自动将变化的值通过数据流进行传播。"
