--- a/site/content/blog/软件开发生命周期常用到的图.md
+++ b/site/content/blog/软件开发生命周期常用到的图.md
@@ -166,7 +166,7 @@ weight = 87
 
 **文档中的位置**：软件设计阶段
 
-![身份认证组件图模板](5079CB6A995C41FE8729452529744E03)
+![身份认证组件图模板](http://assets.processon.com/chart_image/5c8764afe4b0c996d35fb979.png?_=1594028211186)
 
 ## 三、总结
 俗话说“一图胜千言”，能有效的利用不同情境下发明的图是我们提高效率的方法。在软件开发过程中我们可以通过画图来管理系统的分工计划、记录系统的设计过程和增进专业或知识背景不一样的人沟通协作。
